# genericformat

./: pyproject.toml  setup.py
.github/workflows/: release.yml
genericformat/: __main__.py  genericformat.py
