[project]
classifiers = [
 "Environment :: Console",
 "Development Status :: 3 - Alpha",
 "Intended Audience :: Developers",
 "Natural Language :: English",
 "Operating System :: OS Independent",
 "Programming Language :: Python :: 3 :: Only",
 "Programming Language :: Python :: 3",
 "Programming Language :: Python :: 3.10",
 "Programming Language :: Python :: 3.6",
 "Programming Language :: Python :: 3.7",
 "Programming Language :: Python :: 3.8",
 "Programming Language :: Python :: 3.9",
 "Programming Language :: Python :: Implementation :: CPython",
 "Programming Language :: Python :: Implementation :: PyPy",
 "Programming Language :: Python",
 "Topic :: Software Development",
 "Topic :: Text Processing",
 "Typing :: Typed",
]
dynamic = [
 "version",
]
description = "A generic formatter"
name = "genericformat"
readme = "README.md"
requires-python = ">=3.6"
[[project.authors]]
name = "Waylon Walker"
email = "waylon@waylonwalker.com"

[project.license]
file = "LICENSE"

[project.scripts]
genericformat = "genericformat.__main__:main"

[project.urls]
Source = "https://github.com/waylonwalker/genericformat"

[tool.hatch.version]
path = "genericformat/__about__.py"

[tool.hatch.build.targets.sdist]
exclude = [
 "/.github",
]

[tool.hatch.build.targets.wheel]
